# nym-vpn-client

./: README.md  build-windows-modules.ps1
.github/: dependabot.yml  reviewer-by-files.yml
.github/workflows/: build-and-push-wg-docker.yml  build-nym-vpn-android.yml  build-nym-vpn-app-linux.yml  build-nym-vpn-app-windows.yml  build-nym-vpn-core-android.yml  build-nym-vpn-core-deb.yml  build-nym-vpn-core-ios.yml  build-nym-vpn-core-linux.yml  build-nym-vpn-core-mac.yml  build-nym-vpn-core-windows.yml  build-winfw-windows.yml  build-wireguard-go-windows.yml  ci-nym-vpn-core-android.yml  ci-nym-vpn-core-windows.yml  crowdin-macos-ios-upload.yml  generate-build-info-core.yml  publish-nym-vpn-android.yml  publish-nym-vpn-core.yml
.pkg/linux/: install
crowdin-configs/: macos-ios.yml
nym-vpn-android/: README.md
nym-vpn-android/gradle/: libs.versions.toml
nym-vpn-app/: package-lock.json  package.json  vpnd_compat.toml
nym-vpn-app/.pkg/flatpak/: net.nymtech.NymVPN.metainfo.xml
nym-vpn-app/src/: main.tsx  static.ts
nym-vpn-app/src-tauri/: Cargo.toml  tauri.conf.json
nym-vpn-app/src-tauri/bundle/windows/: installer.nsi
nym-vpn-app/src-tauri/src/: cli.rs  db.rs  error.rs  main.rs
nym-vpn-app/src-tauri/src/commands/: gateway.rs  tunnel.rs
nym-vpn-app/src-tauri/src/fs/: path.rs  util.rs
nym-vpn-app/src-tauri/src/grpc/: account_error.rs  client.rs  mod.rs  tunnel_error.rs
nym-vpn-app/src-tauri/src/state/: app.rs
nym-vpn-app/src/hooks/: useI18nError.ts
nym-vpn-app/src/screens/: StartupError.tsx  Welcome.tsx
nym-vpn-app/src/state/: helper.ts  useTauriEvents.ts
nym-vpn-app/src/types/: tauri.ts  tunnel.ts
nym-vpn-app/src/ui/: Button.tsx  ButtonIcon.tsx  ButtonText.tsx  DaemonDot.tsx  Dialog.tsx  FlagIcon.tsx  Link.tsx  MsIcon.tsx  Notifications.tsx  PageAnim.tsx  PulseDot.tsx  Slider.tsx  (+8 more)
nym-vpn-apple/Daemon/: Info.plist
nym-vpn-apple/MixnetLibrary/: Package.swift
nym-vpn-apple/NymVPN.xcodeproj/: project.pbxproj
nym-vpn-apple/NymVPNDaemon/: AppDelegate.swift  NymVPNDaemonApp.swift  QuitAppModal.swift
nym-vpn-apple/Services/: Package.swift
nym-vpn-apple/ServicesMacOS/: Package.swift
nym-vpn-apple/Theme/: Package.swift
nym-vpn-core/: Cargo.toml  README.md  Windows.mk  deny.toml
nym-vpn-core/crates/nym-apple-network/: Cargo.toml
nym-vpn-core/crates/nym-apple-network/src/: path.rs  path_monitor.rs  sys.rs
nym-vpn-core/crates/nym-authenticator-client/src/: lib.rs  mixnet_listener.rs
nym-vpn-core/crates/nym-dns/src/: android.rs
nym-vpn-core/crates/nym-firewall/src/: linux.rs
nym-vpn-core/crates/nym-gateway-probe/netstack_ping/: go.mod  go.sum
nym-vpn-core/crates/nym-gateway-probe/src/: lib.rs
nym-vpn-core/crates/nym-ipc/src/: named_pipe.rs
nym-vpn-core/crates/nym-offline-monitor/: Cargo.toml
nym-vpn-core/crates/nym-offline-monitor/src/: android.rs  lib.rs  linux.rs  windows.rs
nym-vpn-core/crates/nym-offline-monitor/src/apple/: ios.rs  macos.rs  mod.rs  path_monitor.rs
nym-vpn-core/crates/nym-vpn-account-controller/: Cargo.toml  build.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/: command_sender.rs  commander.rs  config.rs  connectivity.rs  controller.rs  error.rs  lib.rs  ticketbooks.rs  vpn_api_client.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/commands/: command_handler.rs  dispatch.rs  mod.rs  running_commands.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/commands/tasks/: mod.rs  register_device.rs  sync_account.rs  sync_device.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/commands/tasks/request_zknym/: cached_data.rs  handler.rs  mod.rs  request.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/storage/: cleanup.rs  mod.rs
nym-vpn-core/crates/nym-vpn-account-controller/src/storage/credentials/: mod.rs
nym-vpn-core/crates/nym-vpn-api-client/src/: client.rs
nym-vpn-core/crates/nym-vpn-api-client/src/types/: account.rs  mod.rs
nym-vpn-core/crates/nym-vpn-lib/: Cargo.toml
nym-vpn-core/crates/nym-vpn-lib-types/: Cargo.toml
nym-vpn-core/crates/nym-vpn-lib-types/src/: lib.rs  service.rs  tunnel_state.rs
nym-vpn-core/crates/nym-vpn-lib-types/src/account/: forget_account.rs  mod.rs  register_device.rs  request_zknym.rs  store_account.rs  sync_account.rs  sync_device.rs  ticketbooks.rs
nym-vpn-core/crates/nym-vpn-lib/src/: bandwidth_controller.rs
nym-vpn-core/crates/nym-vpn-lib/src/platform/: account.rs  environment.rs  error.rs  mod.rs  state_machine.rs  uniffi_lib_types.rs
nym-vpn-core/crates/nym-vpn-lib/src/tunnel_state_machine/: account.rs  mod.rs  resolver.rs  route_handler.rs  tunnel_monitor.rs
nym-vpn-core/crates/nym-vpn-lib/src/tunnel_state_machine/tunnel/wireguard/connected_tunnel/: desktop.rs  mobile.rs
nym-vpn-core/crates/nym-vpn-network-config/src/: discovery.rs  envs.rs  lib.rs  nym_network.rs  refresh.rs
nym-vpn-core/crates/nym-vpn-proto/src/conversions/from_proto/: account.rs  tunnel_state.rs
nym-vpn-core/crates/nym-vpn-proto/src/conversions/into_proto/: account.rs  mod.rs  service.rs  tunnel_state.rs
nym-vpn-core/crates/nym-vpnc/src/: cli.rs  config.rs  main.rs  vpnd_client.rs
nym-vpn-core/crates/nym-vpnd/: Cargo.toml
nym-vpn-core/crates/nym-vpnd/src/: logging.rs  main.rs
nym-vpn-core/crates/nym-vpnd/src/command_interface/: connection_handler.rs  error.rs  listener.rs  start.rs
nym-vpn-core/crates/nym-vpnd/src/command_interface/protobuf/: account.rs  error.rs  mod.rs
nym-vpn-core/crates/nym-vpnd/src/service/: config.rs  error.rs  mod.rs  vpn_service.rs
nym-vpn-core/crates/nym-vpnd/src/service/windows_service/: mod.rs
nym-vpn-core/crates/nym-windows/: Cargo.toml
nym-vpn-core/crates/nym-windows/src/: lib.rs
nym-vpn-core/crates/nym-windows/src/security/: absolute_security_descriptor.rs  access_rights.rs  acl.rs  acl_entry_list.rs  borrowed_acl.rs  borrowed_explicit_access.rs  borrowed_trustee.rs  explicit_access.rs  mod.rs  relative_security_descriptor.rs  security_attributes.rs  security_info.rs  sid.rs  trustee.rs
proto/nym/: account.proto  vpn.proto
wireguard/: README.md  build-wireguard-go.sh
wireguard/libwg/: go.mod
(+100 files in other folders)
