[workspace]
resolver = "2"
members = [
    "crates/nym-apple-network",
    "crates/nym-authenticator-client",
    "crates/nym-common",
    "crates/nym-connection-monitor",
    "crates/nym-dbus",
    "crates/nym-dns",
    "crates/nym-firewall",
    "crates/nym-gateway-directory",
    "crates/nym-gateway-probe",
    "crates/nym-harbour-master-client",
    "crates/nym-ipc",
    "crates/nym-ip-packet-client",
    "crates/nym-macos",
    "crates/nym-mixnet-client",
    "crates/nym-offline-monitor",
    "crates/nym-platform-metadata",
    "crates/nym-routing",
    "crates/nym-vpn-account-controller",
    "crates/nym-vpn-api-client",
    "crates/nym-vpn-lib-types",
    "crates/nym-vpn-lib",
    "crates/nym-vpn-network-config",
    "crates/nym-vpn-proto",
    "crates/nym-vpn-store",
    "crates/nym-vpnc",
    "crates/nym-vpnd-types",
    "crates/nym-vpnd",
    "crates/nym-wg-gateway-client",
    "crates/nym-wg-go",
    "crates/nym-windows",
    "crates/uniffi-bindgen",
]

default-members = [
    "crates/nym-vpnc",
    "crates/nym-vpnd",
    "crates/uniffi-bindgen",
]

# For local development
# [patch."https://github.com/nymtech/nym"]
# nym-authenticator-requests = { path = "../../nym/common/authenticator-requests" }
# nym-api-requests = { path = "../../nym/nym-api/nym-api-requests" }
# nym-bandwidth-controller = { path = "../../nym/common/bandwidth-controller" }
# nym-bin-common = { path = "../../nym/common/bin-common" }
# nym-client-core = { path = "../../nym/common/client-core" }
# nym-compact-ecash = { path = "../../nym/common/nym_offline_compact_ecash" }
# nym-config = { path = "../../nym/common/config" }
# nym-contracts-common = { path = "../../nym/common/cosmwasm-smart-contracts/contracts-common" }
# nym-credential-proxy-requests = { path = "../../nym/nym-credential-proxy/nym-credential-proxy-requests", default-features = false }
# nym-credential-storage = { path = "../../nym/common/credential-storage" }
# nym-credentials = { path = "../../nym/common/credentials" }
# nym-credentials-interface = { path = "../../nym/common/credentials-interface" }
# nym-crypto = { path = "../../nym/common/crypto" }
# nym-ecash-time = { path = "../../nym/common/ecash-time" }
# nym-http-api-client = { path = "../../nym/common/http-api-client" }
# nym-ip-packet-requests = { path = "../../nym/common/ip-packet-requests" }
# nym-node-requests = { path = "../../nym/nym-node/nym-node-requests" }
# nym-pemstore = { path = "../../nym/common/pemstore" }
# nym-service-provider-requests-common = { path = "../../nym/common/service-provider-requests-common" }
# nym-sdk = { path = "../../nym/sdk/rust/nym-sdk" }
# nym-statistics-common = { path = "../../nym/common/statistics" }
# nym-task = { path = "../../nym/common/task" }
# nym-topology = { path = "../../nym/common/topology" }
# nym-validator-client = { path = "../../nym/common/client-libs/validator-client" }
# nym-wireguard-types = { path = "../../nym/common/wireguard-types" }

[workspace.package]
version = "1.9.0-beta"
authors = ["Nym Technologies SA"]
repository = "https://github.com/nymtech/nym-vpn-client"
homepage = "https://nymtech.net"
documentation = "https://nymtech.net"
edition = "2021"
license = "GPL-3.0-only"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"
exit = "deny"
panic = "deny"
unimplemented = "deny"
unreachable = "deny"

[workspace.dependencies]
android_logger = "0.14.1"
anyhow = "1.0.97"
async-trait = "0.1.87"
async-stream = "0.3.6"
backon = "1.4"
base64 = "0.22"
base64-url = "3.0.0"
bincode = "1.3.3"
bip39 = "2.1"
bitflags = "2"
bs58 = "0.5.1"
bytes = "1.10"
chrono = "0.4.40"
clap = "4.5"
dbus = "0.9"
debounced = "0.2"
dirs = "5.0.1"
duct = "0.13"
eventlog = "0.3.0"
futures = "0.3.31"
futures-util = "0.3"
hex = "0.4"
hickory-resolver = "0.25"
hickory-server = "0.25"
http = "1.3.1"
hyper-util = "0.1.11"
inotify = "0.11"
ipnetwork = "0.20"
rs-release = "0.1.7"
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2"
log = "0.4.27"
log-panics = "2"
maplit = "1.0.2"
mnl = "0.2.2"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.19.0"
netlink-sys = "0.8.7"
nftnl = "0.7.0"
nix = "0.29"
once_cell = "1.21"
pfctl = "0.6"
pnet_packet = "0.35.0"
prost = "0.13.5"
prost-types = "0.13.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12", default-features = false }
resolv-conf = "0.7"
rtnetlink = "0.14.1"
rust2go = "0.3.16"
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
si-scale = "0.2.3"
signature = "2.2.0"
sqlx = "0.7.4"
strum = "0.26"
strum_macros = "0.26"
sysinfo = "0.33"
system-configuration = "0.6"
tap = "1.0.1"
tempfile = "3.19"
thiserror = "2.0"
time = "0.3.41"
tokio = "1.46"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["codec"] }
toml = "0.8"
tonic = "0.12.3"
tonic-build = "0.12.3"
tower = "0.5.2"
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-oslog = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
triggered = "0.1.1"
tun = { version = "0.6.1", features = ["async"] }
uniffi = { version = "0.27.3", features = ["cli"] }
url = "2.5"
uuid = "1.15"
vergen = { version = "8.3.1", default-features = false }
which = { version = "7.0", default-features = false }
widestring = "1.0"
windows = "0.59"
windows-service = "0.8.0"
winreg = "0.55"
wmi = "0.14"
x25519-dalek = "2.0"
zeroize = "1.6.0"

# Switch these to the latest version once objc2 v0.6.1 released
# https://github.com/madsmtm/objc2/milestone/7
block2 = { git = "https://github.com/madsmtm/objc2", rev = "91a74f332f3db66378f457ad954f26c2d72277ca" }
dispatch2 = { git = "https://github.com/madsmtm/objc2", rev = "91a74f332f3db66378f457ad954f26c2d72277ca" }
objc2 = { git = "https://github.com/madsmtm/objc2", rev = "91a74f332f3db66378f457ad954f26c2d72277ca" }
objc2-foundation = { git = "https://github.com/madsmtm/objc2", rev = "91a74f332f3db66378f457ad954f26c2d72277ca" }

nym-apple-network = { path = "crates/nym-apple-network" }
nym-authenticator-client = { path = "crates/nym-authenticator-client" }
nym-common = { path = "crates/nym-common" }
nym-connection-monitor = { path = "crates/nym-connection-monitor" }
nym-dbus = { path = "crates/nym-dbus" }
nym-dns = { path = "crates/nym-dns" }
nym-firewall = { path = "crates/nym-firewall" }
nym-gateway-directory = { path = "crates/nym-gateway-directory" }
nym-ip-packet-client = { path = "crates/nym-ip-packet-client" }
nym-ipc = { path = "crates/nym-ipc" }
nym-macos = { path = "crates/nym-macos" }
nym-mixnet-client = { path = "crates/nym-mixnet-client" }
nym-offline-monitor = { path = "crates/nym-offline-monitor" }
nym-routing = { path = "crates/nym-routing" }
nym-vpn-account-controller = { path = "crates/nym-vpn-account-controller" }
nym-vpn-api-client = { path = "crates/nym-vpn-api-client" }
nym-vpn-lib = { path = "crates/nym-vpn-lib" }
nym-vpn-lib-types = { path = "crates/nym-vpn-lib-types" }
nym-vpn-network-config = { path = "crates/nym-vpn-network-config" }
nym-vpn-proto = { path = "crates/nym-vpn-proto" }
nym-vpn-store = { path = "crates/nym-vpn-store" }
nym-vpnd-types = { path = "crates/nym-vpnd-types" }
nym-wg-gateway-client = { path = "crates/nym-wg-gateway-client" }
nym-wg-go = { path = "crates/nym-wg-go" }
nym-windows = { path = "crates/nym-windows" }

nym-authenticator-requests = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-api-requests = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-bin-common = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-client-core = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-compact-ecash = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-config = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-contracts-common = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-credential-proxy-requests = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles", default-features = false }
nym-credential-storage = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-credentials = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-credentials-interface = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-crypto = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-ecash-time = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-http-api-client = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-node-requests = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-pemstore = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-service-provider-requests-common = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-statistics-common = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-task = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-topology = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-validator-client = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
nym-wireguard-types = { git = "https://github.com/nymtech/nym", branch = "release/2025.6-chuckles" }
