[package]
name = "nym-vpn-app"
version = "1.9.0-dev"
description = "NymVPN desktop client"
authors = [
    "Nym Technologies SA",
    "Pierre <dommerc.pierre@gmail.com>",
    "Zane <zanecschepke@gmail.com>",
]
license = "GPL-3.0-only"
documentation = "https://nymtech.net"
repository = "https://github.com/nymtech/nym-vpn-client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
build-info-build = "0.0.40"
toml = "0.8.5"

[dependencies]
tauri = { version = "2.3.0", features = ["tray-icon", "image-png"] }
tokio = { version = "1.46", features = ["rt", "sync", "time", "fs", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", features = [
    "tracing-log",
    "env-filter",
] }
tracing-appender = "0.2"
anyhow = "1.0"
dotenvy = "0.15.7"
thiserror = "2.0.0"
ts-rs = { version = "10.0", features = ["chrono-impl"] }
once_cell = "1.18.0"
toml = "0.8.5"
time = "0.3.9"
itertools = "0.14"
clap = { version = "4.5", features = ["derive"] }
build-info = "0.0.40"
sled = "0.34.7"
strum = { version = "0.27", features = ["derive"] }
tonic = { version = "0.12.3", features = ["channel"] }
tower = "0.5.2"
rust_iso3166 = "0.1"
dirs = "6.0"
semver = "1.0"

# nym deps
nym-vpn-proto = { path = "../../nym-vpn-core/crates/nym-vpn-proto" }
nym-ipc = { path = "../../nym-vpn-core/crates/nym-ipc" }

# tauri deps
tauri-plugin-os = "2.0.1"
tauri-plugin-notification = "2.0.1"
tauri-plugin-dialog = "2.0.1"
tauri-plugin-process = "2.0.1"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-updater = "2.0.1"
tauri-plugin-single-instance = "2.0.1"
tauri-plugin-window-state = "2.0.1"
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"

[target."cfg(windows)".dependencies]
windows = { version = "0.60.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true
