[package]
name = "nym-offline-monitor"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "time", "rt"] }
debounced.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true

nym-common.workspace = true
nym-routing.workspace = true
nym-windows.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
dispatch2.workspace = true
nym-apple-network.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
async-trait.workspace = true
