[package]
name = "nym-vpn-account-controller"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bincode.workspace = true
nym-compact-ecash.workspace = true
nym-credential-proxy-requests.workspace = true
nym-credential-storage.workspace = true
nym-credentials-interface.workspace = true
nym-credentials.workspace = true
nym-ecash-time.workspace = true
nym-http-api-client.workspace = true
nym-offline-monitor.workspace = true
nym-sdk.workspace = true
nym-vpn-api-client = { workspace = true }
nym-vpn-lib-types = { workspace = true, features = ["nym-type-conversions"] }
nym-vpn-network-config = { workspace = true }
nym-vpn-store = { workspace = true }
nym-wg-gateway-client = { workspace = true }
serde.workspace = true
si-scale.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "time"] }
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
time.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true

[build-dependencies]
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
