[package]
name = "nym-vpn-lib-types"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
nym-type-conversions = [
    "dep:nym-bandwidth-controller",
    "dep:nym-connection-monitor",
    "dep:nym-gateway-directory",
    "dep:nym-statistics-common",
    "dep:nym-vpn-api-client",
    "dep:nym-vpn-network-config",
    "dep:nym-wg-gateway-client",
]

[dependencies]
si-scale.workspace = true
thiserror.workspace = true
time.workspace = true

nym-bandwidth-controller = { workspace = true, optional = true }
nym-connection-monitor = { workspace = true, optional = true }
nym-gateway-directory = { workspace = true, optional = true }
nym-statistics-common = { workspace = true, optional = true }
nym-vpn-api-client = { workspace = true, optional = true }
nym-vpn-network-config = { workspace = true, optional = true }
nym-wg-gateway-client = { workspace = true, optional = true }
strum_macros = { workspace = true }
