[package]
name = "nym-vpn-lib"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[dependencies]
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
hickory-resolver = { workspace = true, features = [
    "dns-over-tls",
    "dns-over-https",
] }
ipnetwork.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
rand.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = [
    "process",
    "rt-multi-thread",
    "fs",
    "sync",
] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["codec", "rt"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
tun = { workspace = true, features = ["async"] }
uniffi.workspace = true
url.workspace = true
nym-bandwidth-controller.workspace = true
nym-bin-common.workspace = true
nym-client-core.workspace = true
nym-config.workspace = true
nym-credentials-interface.workspace = true
nym-crypto.workspace = true
nym-ip-packet-requests.workspace = true
nym-sdk.workspace = true
nym-statistics-common.workspace = true
nym-task.workspace = true
nym-validator-client.workspace = true
nym-wireguard-types.workspace = true

nym-apple-network.workspace = true
nym-authenticator-client.workspace = true
nym-common.workspace = true
nym-connection-monitor.workspace = true
nym-gateway-directory.workspace = true
nym-ip-packet-client.workspace = true
nym-macos.workspace = true
nym-mixnet-client.workspace = true
nym-offline-monitor.workspace = true
nym-vpn-account-controller.workspace = true
nym-vpn-api-client.workspace = true
nym-vpn-lib-types = { workspace = true, features = ["nym-type-conversions"] }
nym-vpn-network-config.workspace = true
nym-vpn-store.workspace = true
nym-wg-gateway-client.workspace = true
nym-wg-go.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = [
    "socket",
    "net",
    "fs",
    "signal",
    "ioctl",
] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_NetworkManagement_Ndis"] }
nym-windows.workspace = true
nym-routing.workspace = true
nym-dns.workspace = true
nym-firewall.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
hickory-proto.workspace = true
hickory-server = { workspace = true, features = ["resolver"] }
nym-routing.workspace = true
nym-dns.workspace = true
nym-firewall.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
rand.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
tracing-oslog.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
debounced.workspace = true
dispatch2.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

[features]
default = ["amnezia"]
metrics-server = ["nym-client-core/metrics-server"]
amnezia = ["nym-wg-go/amnezia"]

[package.metadata.cargo-machete]
ignored = ["vergen"]
