[package]
name = "nym-vpnd"
description = "NymVPN daemon"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bip39.workspace = true
clap.workspace = true
futures.workspace = true
http.workspace = true
log-panics.workspace = true
maplit.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["signal", "rt-multi-thread", "sync"] }
tokio-stream.workspace = true
tokio-util.workspace = true
toml.workspace = true
tonic.workspace = true
tracing-appender.workspace = true
tracing-oslog.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi"] }
tracing.workspace = true
zeroize.workspace = true
nym-bin-common.workspace = true
nym-credentials-interface.workspace = true
nym-task.workspace = true
nym-validator-client.workspace = true
nym-windows.workspace = true

# Local crates
nym-ipc.workspace = true
nym-vpn-account-controller = { workspace = true }
nym-vpn-api-client = { workspace = true }
nym-vpn-lib = { workspace = true }
nym-vpn-lib-types = { workspace = true }
nym-vpn-network-config = { workspace = true }
nym-vpn-proto = { workspace = true, features = ["conversions"] }
nym-vpn-store = { workspace = true }
nym-vpnd-types = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service.workspace = true
eventlog.workspace = true

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
]

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

# Debian
[package.metadata.deb]
name = "nym-vpnd"
extended-description = '''NymVPN is a vpn service that uses the Nym mixnet.

This package contains the nym-vpnd daemon binary, which runs as a background service.

End-users should use either the CLI client, nym-vpnc, or the GUI client, nym-vpn-app.'''
maintainer-scripts = "debian"
recommends = "nym-vpnc"
revision = ""

[package.metadata.deb.systemd-units]
unit-name = "nym-vpnd"
enable = true
start = true
restart-after-upgrade = false
stop-on-upgrade = true
unit-scripts = "linux/unit-scripts"

[package.metadata.cargo-machete]
ignored = ["vergen"]
