[package]
name = "nym-windows"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[target.'cfg(windows)'.dependencies]
bitflags.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Authentication_Identity",
    "Win32_Storage_FileSystem",
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
]

[target.'cfg(windows)'.dev-dependencies]
tempfile.workspace = true
